# Skull-Stripping

SkullStripping/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  skullstrip.cpp  skullstrip.hpp
Skull_Stripping/SkullStripping/: README.txt  skullstrip.cpp
Skull_Stripping/SkullStripping/output_example/: DS_HC0010_mprage_registered_EMS_brainmask.nrrd  DS_HC0010_mprage_registered_EMS_brainmask_pp.nrrd  DS_HC0010_mprage_registered_EMS_stripped.nrrd
Skull_Stripping/SkullStripping/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  strip.cpp  strip.h
Skull_Stripping/Skull_Stripping/: Skull_Stripping.pro  mainwindow.cpp  mainwindow.ui  skullstrip.cpp  skullstrip.hpp
Skull_Stripping/Skull_Stripping-build-Desktop-Debug/: Makefile  Skull_Stripping  moc_mainwindow.cpp  ui_mainwindow.h
Skull_Stripping/Skull_Stripping/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  skullstrip.cpp  skullstrip.hpp
src/: mainwindow.h  mainwindow.ui  skullstrip.hpp
